--- a/.github/workflows/sonar-scan.yml
+++ b/.github/workflows/sonar-scan.yml
@@ -1,21 +1,21 @@
-name: SonarCloud SAST scan! 
+name: SonarCloud SAST scan
+
 on:
-    # Trigger analysis when pushing in master or pull requests, and when creating
-    # a pull request.
-    push:
+  push:
     branches:
-        - main
-    pull_request:
-        types: [opened, synchronize, reopened]
+      - main
+  pull_request:
+    types: [opened, synchronize, reopened]
+
 jobs:
-    sonarcloud:
-        runs-on: ubuntu-latest
-        steps:
-        - uses: actions/checkout@v4
+  sonarcloud:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
         with:
-            # Disabling shallow clone is recommended for improving relevancy of reporting
-            fetch-depth: 0
-        - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@v2.3.0        # Ex: v2.1.0, See the latest version at https://github.com/marketplace/actions/sonarcloud-scan
+          fetch-depth: 0  # Disabling shallow clone is recommended for improving relevancy of reporting
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@v2.3.0  # Ex: v2.1.0, See the latest version at https://github.com/marketplace/actions/sonarcloud-scan
         env:
-            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
