--- a/.github/workflows/sonar-scan.yml
+++ b/.github/workflows/sonar-scan.yml
@@ -1,21 +1,19 @@
-name: SonarCloud SAST scan
-
+name: SAST with SonarCloud
 on:
   push:
     branches:
       - main
   pull_request:
     types: [opened, synchronize, reopened]
-
 jobs:
   sonarcloud:
+    name: SonarCloud
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Disabling shallow clone is recommended for improving relevancy of reporting
+          fetch-depth: 0  
       - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@v2.3.0  # Ex: v2.1.0, See the latest version at https://github.com/marketplace/actions/sonarcloud-scan
-        env:
+        uses: SonarSource/sonarcloud-github-action@master
+        env: 
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
